Added table of contents

--- a/neural-style-transfer.ipynb
+++ b/neural-style-transfer.ipynb
@@ -7,8 +7,22 @@
    "source": [
     "# Neural Style Transfer\n",
     "\n",
-    "Resources:\n",
-    "* [Original paper](https://arxiv.org/abs/1508.06576)\n",
+    "Content:  \n",
+    "    Paper overview  \n",
+    "        Model  \n",
+    "        Loss  \n",
+    "            Total loss  \n",
+    "            Content loss  \n",
+    "            Style loss  \n",
+    "        Training process  \n",
+    "    Experiments:  \n",
+    "        Gram matrix values in different layers (Normalized vs Not-normalized)  \n",
+    "        Loss values in different layers (impact)\n",
+    "        \n",
+    "\n",
+    "**Resources:**\n",
+    "* [Original paper - A Neural Algorithm of Artistic Style](https://arxiv.org/abs/1508.06576)\n",
+    "* [Demystifying Neural Style Transfer](https://arxiv.org/abs/1701.01036)\n",
     "* [Official PyTorch Tutorial](https://pytorch.org/tutorials/advanced/neural_style_tutorial.html)\n",
     "* [Blog by Amar](https://towardsdatascience.com/implementing-neural-style-transfer-using-pytorch-fd8d43fb7bfa)"
    ]
@@ -31,7 +45,8 @@
    "id": "457c9ab2-8e1d-42e9-bfff-50929ab16d35",
    "metadata": {},
    "source": [
-    "## Model\n",
+    "## Paper overview\n",
+    "### Model\n",
     "\n",
     "Here we describe vgg19 model.\n",
     "\n",
@@ -61,7 +76,7 @@
    "id": "2664e504-063d-43c8-814d-410d691e3fd4",
    "metadata": {},
    "source": [
-    "## Loss"
+    "### Loss"
    ]
   },
   {
@@ -77,7 +92,7 @@
    "id": "047cb19a-5a33-400f-83ef-3786c7805232",
    "metadata": {},
    "source": [
-    "### Total Loss\n",
+    "#### Total Loss\n",
     "\n",
     "$$\n",
     "\\mathcal{L}_{total}(\\vec{p}, \\vec{a}, \\vec{x}) = \\alpha\\mathcal{L}_{content}(\\vec{p}, \\vec{x}) + \\beta\\mathcal{L}_{style}(\\vec{a}, \\vec{x}) \\tag{1}\n",
@@ -118,7 +133,7 @@
    "id": "96f02e16-6423-4fc1-abd7-a399082ff7ca",
    "metadata": {},
    "source": [
-    "### Content Loss\n",
+    "#### Content Loss\n",
     "\n",
     "$$\n",
     "\\mathcal{L}_{content}(\\vec{p}, \\vec{x}) = \\dfrac{1}{2} \\sum_{i,j}(F_{i,j}^{l} - P_{i,j}^{l})^2 \\tag{2}\n",
@@ -157,7 +172,7 @@
    "id": "9452459e-ebf7-4163-aaf6-f2229c232b93",
    "metadata": {},
    "source": [
-    "### Style Loss\n",
+    "#### Style Loss\n",
     "\n",
     "Instead of taking raw conv layer outputs as in content loss, style loss firstly computes Gram matrix. They mentioned that Gram matrix computes feature correlations between feature maps? (whill have to look more into what that exactly means).\n",
     "$$\n",
@@ -165,7 +180,7 @@
     "$$\n",
     "where:\n",
     "\n",
-    "$F_{i,k}^l$ is again output of conv layer **$l$**, defined as $F^{l} \\in \\mathbb{R}^{N_l x M_l}$, where $(N_l = channels, M_l = height * width)$  \n",
+    "$F_{i,k}^l$ is output of conv layer **$l$**, defined as $F^{l} \\in \\mathbb{R}^{N_l x M_l}$, where $(N_l = channels, M_l = height * width)$  \n",
     "$F_{j,k}^l$ is transposed version of previously mentioned matrix\n",
     "\n",
     "This essentially means $G$ is computed as $F * F^T$ and $G \\in \\mathbb{R}^{NxN}$\n",
@@ -239,6 +254,56 @@
     "\n",
     "        return style_loss / self.num_layers"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8836aba2-8469-4ec3-873b-8694655255f0",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Training procedure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ab05ea-4679-4db1-adc9-f151a1bc627d",
+   "metadata": {},
+   "source": [
+    "## Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ea12ca7-10b8-4a31-a586-91368ec1f8d3",
+   "metadata": {},
+   "source": [
+    "### Gram matrix values (Normalized vs Not-normalized)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a7a11a-b504-4c09-ae75-9ad500adde3e",
+   "metadata": {},
+   "source": [
+    "### Impact of losses in different layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ee7605a-5f54-404f-8879-68fb51916d30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d2ea91-43d2-42ce-abf1-68506f326b81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
