--- a/neural-style-transfer.ipynb
+++ b/neural-style-transfer.ipynb
@@ -408,7 +408,7 @@
    "id": "e34a18f2-bb30-4437-a050-7f98e4f38d7a",
    "metadata": {},
    "source": [
-    "`Loss` values have benn scaled by **log** due to extremly small numbers in higher layers and larger number in others."
+    "`Loss` values have been scaled by **log** due to extremly small numbers in higher layers and larger number in others."
    ]
   },
   {
